# Real-Time-Aircraft-Engine-Predictive-Maintenance-System

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  Dockerfile.streaming  FD004.ipynb  GETTING_STARTED.md  LICENSE  MONITORING.md  README.md  WHAT_I_ADDED.md  app.py  docker-compose.monitoring.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  start.bat  start.sh  test-rul.ipynb
artifacts/: gru.keras  inference_config.json  model.keras  scaler.pkl
artifacts/data_feature_engineering/: X_test.npy  feature_config.json  y_test.npy  y_train.npy  y_val.npy
artifacts/data_transformation/: scaler.pkl
artifacts/data_validation/: status.json
artifacts/model_evaluation/: metrics.json  results.parquet
artifacts/model_trainer/: history.json  model.keras
config/: config.yaml  features.yaml  model.yaml  params.yaml  redis.yaml  registor.yaml  schema.yaml  transform.yaml
docs/: 00_index.md  01_dataset.md  02_preprocessing.md  03_feature_engineering.md  04_model_training.md  05_inference_service.md  06_streaming_pipeline.md  07.1_UI.md  07_monitoring.md  08_project_structure.md  09_architecture.md  CLASSIFICATION_METRICS_FIX.md  CRITICAL_BUG_FIX.md  MLFLOW_FIXES.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css
monitoring/prometheus/: alerting_rules.yml  prometheus.yml
notebook/: test-rul.ipynb  test.ipynb
reports/drift/: drift_report_20260519_205458.html  drift_report_20260519_210741.html  drift_report_20260519_210841.html  drift_report_20260528_202723.html
scripts/: export_scaler_params.py  install_flink.sh  provision_solace_queues.sh
src/cloud/: s3.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  feature_engineering.py  model_evaluation.py  model_registry.py  model_training.py
src/config/: configuration.py
src/constants/: __init__.py
src/entity/: config_entity.py
src/exception/: exception.py
src/inference/: app.py  buffer.py  feature_store.py  loader.py  metrics.py  predictor.py  preprocessor.py  routes.py  structured_logger.py  ws.py
src/logging/: logger.py
src/metrics/: plot.py  scores.py
src/monitoring/: __init__.py  drift_detector.py  drift_monitor.py
test/: test_inference.py  test_stream_inference.py
(+47 files in other folders)
