[project]
name = "aircraft-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.43.2",
    "setuptools>=70.0.0",
    "dagshub>=0.7.0",
    "protobuf>=3.20.0,<5.29.0",
    "ensure>=1.0.4",
    "matplotlib>=3.10.9",
    "mlflow>=2.16.0",
    "numpy>=2.4.4",
    "pandas>=2.2.0,<3",
    "pyarrow>=4.0.0,<24",
    "python-box>=7.4.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.17.0,<2.21.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.13.4",
    "joblib>=1.5.3",
    "prometheus-client>=0.25.0",
    "redis>=7.4.0",
]

[dependency-groups]
training = [
    "ipykernel>=7.2.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
    "evidently>=0.7.21",
    "psycopg2-binary>=2.9.12",
    "schedule>=1.2.2",
]